--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.3.1",
+    "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "node-cron": "^1.2.1",
     "node-opus": "^0.3.3"
