--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "node-cron": "^1.2.1",
     "node-opus": "^0.3.3",
-    "ytdl-core": "^3.4.1"
+    "ytdl-core": "^3.4.1",
+    "opusscript": "0.0.7"
   }
 }
